affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: affinity-demo-pod
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                  - linux
  containers:
  - name: nginx
    image: nginx
