anti-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: anti-affinity-demo-pod
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - nginx
          topologyKey: kubernetes.io/hostname
  containers:
  - name: nginx
    image: nginx
