health-probe-d1.yml
apiVersion: v1
kind: Pod
metadata:
  name: health-probes-pod2
spec:
  containers:
  - name: demo-app
    image: busybox
    command: ["sh", "-c", "sleep 30; touch /tmp/healthy; touch /tmp/ready; while true; do echo OK; sleep 10; done"]
    startupProbe:
      exec:
        command:
        - ls
        - /tmp/healthy
      initialDelaySeconds: 60
      periodSeconds: 5
      failureThreshold: 5
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 60
      periodSeconds: 10
    readinessProbe:
      exec:
        command:
        - ls
        - /tmp/ready
      initialDelaySeconds: 60
      periodSeconds: 5
