health-probe-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhooq-springboot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jhooq-springboot
  template:
    metadata:
      labels:
        app: jhooq-springboot
    spec:
      containers:
        - name: springboot
          image: kvchandra/kubernetes:jhooq-k8s-springboot

          resources:
            requests:
              memory: "128Mi"
              cpu: "512m"
            limits:
              memory: "128Mi"
              cpu: "512m"

          ports:
            - containerPort: 8081
          
          readinessProbe:

            httpGet:

              path: /hello

              port: 8081

            initialDelaySeconds: 30

            periodSeconds: 10


          livenessProbe:

            httpGet:

              path: /hello

              port: 8081

            initialDelaySeconds: 30

            periodSeconds: 10



          startupProbe:

            httpGet:

              path: /hello

              port: 8081

            failureThreshold: 30

            periodSeconds: 10
