pod-with-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
  - name: demo-container
    image: nginx
    volumeMounts:
    - name: demo-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: demo-volume
    persistentVolumeClaim:
      claimName: demo-pvc
