pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: tomv3
  name: tomv3
  namespace: tomcatv1
spec:
  containers:
  - image: kvchandra/tomcat9-ubuntu
    name: tomv3
    ports:
    - containerPort: 8086
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
