state.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: state1
  name: st1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: state1
  serviceName: s1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: state1
    spec:
      containers:
      - image: kvchandra/tomcat9-ubuntu
        name: state1
        ports:
        - containerPort: 9090
        resources: {}
status: {}
