stateless-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateless-app
  template:
    metadata:
      labels:
        app: stateless-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
