test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  serviceAccountName: service-account
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
