v-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: mongo
          name: db
          args: ["--dbpath", "/data/db"]
          volumeMounts:
            - mountPath: /data/db
              name: db-volume
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
