deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1newimg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1nimg
  template:
    metadata:
      labels:
        app: demo1nimg
    spec:
      containers:
      - name: demo1-container
        image: kvchandra/demo1newimg:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo1newimg-service
spec:
  selector:
    app: demo1nimg
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
