headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  clusterIP: None # 
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
