health-probe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jhooq-springboot
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: jhooq-springboot
