service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo2-service
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort  # Use NodePort to access the service from outside Minikube
