state-less-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stateless-service
spec:
  type: NodePort
  selector:
    app: stateless-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
