svc-ingress.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ingress2
  name: ingress2
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: ing2
  type: ClusterIP
status:
  loadBalancer: {}
