ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ingress1
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: ingress2
            port:
              number: 8081
        path: /demo
        pathType: Prefix
status:
  loadBalancer: {}
