ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1newimg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /demo1
        pathType: Prefix
        backend:
          service:
            name: demo1newimg-service
            port:
              number: 8080
